[gd_scene load_steps=10 format=3 uid="uid://ctj60wpv4t0jq"]

[ext_resource type="Script" uid="uid://cdyi7s8svfd74" path="res://scenes/UI/overlay/task_overlay.gd" id="1_fd3qe"]
[ext_resource type="Texture2D" uid="uid://50sv1631tkuj" path="res://textures/backgrounds/task_update_background_ninepatch.png" id="2_d5p0s"]
[ext_resource type="Texture2D" uid="uid://b1yf6nrfauwd7" path="res://textures/backgrounds/task_update_header_background_ninepatch.png" id="2_rlgk0"]
[ext_resource type="Texture2D" uid="uid://dcdger87y2qef" path="res://textures/backgrounds/task_update_step_background_ninepatch.png" id="4_vt342"]

[sub_resource type="Theme" id="Theme_d5p0s"]
VBoxContainer/constants/separation = 0

[sub_resource type="Theme" id="Theme_rlgk0"]
MarginContainer/constants/margin_left = 20
MarginContainer/constants/margin_right = 25

[sub_resource type="Theme" id="Theme_vt342"]
MarginContainer/constants/margin_left = 15
MarginContainer/constants/margin_right = 25

[sub_resource type="Theme" id="Theme_7t0go"]
MarginContainer/constants/margin_left = 15
MarginContainer/constants/margin_right = 25

[sub_resource type="Theme" id="Theme_6prwc"]
MarginContainer/constants/margin_left = 15
MarginContainer/constants/margin_right = 25

[node name="TaskOverlay" type="Control"]
z_index = 150
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_fd3qe")

[node name="MarginContainer" type="MarginContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.943
anchor_top = 0.139
anchor_right = 0.997
anchor_bottom = 0.139
offset_left = -0.560059
offset_top = -0.12001
offset_right = -0.240112
offset_bottom = 11.88
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
use_parent_material = true
layout_mode = 2
theme = SubResource("Theme_d5p0s")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_rlgk0")
region_rect = Rect2(0, 0, 64, 32)
patch_margin_left = 16
patch_margin_right = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_rlgk0")

[node name="TaskHeaderLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("2_d5p0s")
region_rect = Rect2(0, 0, 64, 32)
patch_margin_left = 16
patch_margin_right = 21

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_vt342")
theme_override_constants/margin_left = 50

[node name="TaskNameLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
texture = ExtResource("4_vt342")
region_rect = Rect2(0, 0, 64, 32)
patch_margin_left = 16
patch_margin_right = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme = SubResource("Theme_7t0go")

[node name="TaskPreviousStepLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer3/MarginContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2
texture = ExtResource("4_vt342")
region_rect = Rect2(0, 0, 64, 32)
patch_margin_left = 16
patch_margin_right = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2
theme = SubResource("Theme_6prwc")

[node name="TaskStepLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer4/MarginContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2
